[gd_scene load_steps=4 format=3 uid="uid://bxodlqo77nnoh"]

[ext_resource type="Script" uid="uid://7ognqlv1xeki" path="res://scenes/ui/card_menu_ui.gd" id="1_escg4"]
[ext_resource type="Resource" uid="uid://cb5nai311vfiu" path="res://characters/warrior/cards/warrior_slash.tres" id="2_1as8l"]
[ext_resource type="PackedScene" uid="uid://d4apfche1d33w" path="res://scenes/ui/card_visuals.tscn" id="3_5nlic"]

[node name="CardMenuUI" type="CenterContainer"]
offset_right = 25.0
offset_bottom = 30.0
size_flags_horizontal = 3
script = ExtResource("1_escg4")
card = ExtResource("2_1as8l")

[node name="Visuals" parent="." instance=ExtResource("3_5nlic")]
layout_mode = 2

[connection signal="gui_input" from="." to="." method="_on_visuals_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
